codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript__tests__transcript_overlay_prepended_history.snap
---
source: tui/src/pager_overlay/transcript_tests.rs
expression: visible_before.trim()
---
line2

line3
